--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 micronautVersion=4.3.8
 kotlinVersion=1.9.23
 org.gradle.jvmargs=-Xmx4096M
+dockerRegistry=us-central1-docker.pkg.dev/thesis-416800/uoc
