Make prometheus not sensitive

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ micronaut.metrics.export.prometheus.enabled=true
 micronaut.metrics.enabled=true
 micronaut.metrics.export.prometheus.step=PT1M
 micronaut.metrics.export.prometheus.descriptions=true
+endpoints.prometheus.sensitive=false
 database.url=${DATABASE_URL:`jdbc:mysql://localhost:33306/library`}
 database.username=${DATABASE_USERNAME:root}
 database.password=${DATABASE_PASSWORD:root}
