--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ endpoints.prometheus.sensitive=false
 database.url=${DATABASE_URL:`jdbc:mysql://localhost:33306/library`}
 database.username=${DATABASE_USERNAME:root}
 database.password=${DATABASE_PASSWORD:root}
+micronaut.http.services.database-proxy.url=${DATABASE_PROXY_URL:`http://localhost:8080`}
